--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Akuthota Aravind</title>
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<h1>Currently learning Java </h1>
+<p>Aspiring software engineer with skills in Html, Css, Javascript , Java , MySQL.</p>
 
 </body>
 </html>
